products route serving html page

--- a/public/html/products.html
+++ b/public/html/products.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Products</title>
 </head>
 
 <body>
-    <div id="data"></div>
-    <!-- JS -->
-    <script src="./js/index.js"></script>
+    <h1>Products</h1>
 </body>
 
 </html>
